source/assets/images2020/k8s-elk-auth-kibana-via-ad.assets/elk-single-node/log-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elk
  labels:
    application: logging
    component: logstash
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      component: logstash
  template:
    metadata:
      labels:
        application: logging
        component: logstash
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: logstash
        imagePullPolicy: IfNotPresent
        image: logstash:7.5.1
        resources:
          requests:
            memory: 2Gi
            cpu: 1
          limits:
            memory: 2Gi
            cpu: 1
        ports:
        - containerPort: 514
          name: syslog-tcp
          protocol: TCP
        - containerPort: 514
          name: syslog-udp
          protocol: UDP
        - containerPort: 5044
          name: beats-tcp
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/share/logstash/config/conf.d
      volumes:
      - name: config
        configMap:
          name: log-config
      restartPolicy: Always
