source/assets/images2020/k8s-elk-auth-kibana-via-ad.assets/elk-single-node/kb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    k8s-app: kibana
